# slopshell

./: .gitignore  .goreleaser.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  go.mod  go.sum  package-lock.json  package.json  playwright.config.ts  playwright.e2e.ci.config.ts  playwright.e2e.config.ts  playwright.playtest.config.ts  pyproject.toml  train_hotword_script_test.go
docs/: architecture.md  auxiliary-surfaces.md  codex-app-server-pivot.md  delegation-routing-v2.md  design-lineage.md  extension-platform-whitepaper.md  gesture-truth-table.md  helpy-recovery-issue-pack.md  interaction-grammar.md  interfaces.md  live-runtime-whitepaper.md  meeting-notes-privacy.md  meeting-partner-whitepaper.md  native-clients-plan.md  native-clients.md  object-scoped-intent-ui.md  plugins.md  release-v0.0.1.md  release-v0.0.2.md  release-v0.0.3.md  release-v0.0.4.md  release-v0.0.5.md  release-v0.0.6.md  release-v0.0.8.md  release-v0.1.0.md  release-v0.1.6.md  release-v0.1.8.md  spec-index.md
scripts/: benchmark_qwen35_small.py  benchmark_tabura_usecases.py  build-slsh.sh  build-voxtype-macos.sh  bump-version.sh  check-chat-prompt-contract.sh  check-native-validation-docs.mjs  check-test-reports-workflow.mjs  check-version-consistency.sh  codex-local.sh  create-helpy-recovery-issues.sh  dev-setup.sh  download_qwen35_small.sh  e2e-ci-server.sh  generate-package-manager-artifacts.sh  hotword-config.yaml  install-slopshell-user-units.sh  install-tabula-user-units.sh  install-tabura-user-units.sh  install.ps1  install.sh  lmstudio-cli.sh  playtest.sh  (+19 more)
(+593 files in other folders)
