[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabula"
version = "0.1.0"
description = "MCP canvas adapter with local window, HTTP daemon, and web interface"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tabula" }]
dependencies = [
  "pypdf>=4.3",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.7"
]
web = [
  "aiohttp>=3.9",
  "asyncssh>=2.14"
]
test = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "aiohttp>=3.9"
]

[project.scripts]
tabula = "tabula.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tabula.web" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
